@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.common.auth;
 
-import java.util.Collections;
 import java.util.Map;
 import javax.ws.rs.core.HttpHeaders;
 import org.apache.pinot.spi.auth.AuthProvider;
@@ -37,7 +36,7 @@ public class StaticTokenAuthProvider implements AuthProvider {
 
   public StaticTokenAuthProvider(String token) {
     _taskToken = token;
-    _requestHeaders = Collections.singletonMap(HttpHeaders.AUTHORIZATION, token);
+    _requestHeaders = Map.of(HttpHeaders.AUTHORIZATION, token);
   }
 
   public StaticTokenAuthProvider(AuthConfig authConfig) {
@@ -50,7 +49,7 @@ public class StaticTokenAuthProvider implements AuthProvider {
     String userToken = tokenValue.toString();
 
     _taskToken = makeToken(prefix, userToken);
-    _requestHeaders = Collections.singletonMap(header, _taskToken);
+    _requestHeaders = Map.of(header, _taskToken);
   }
 
   @Override
