@@ -27,7 +27,6 @@ import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -247,7 +246,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
     // Create StreamMetadata with explicit sequence numbers (simulating copy table)
     IdealState idealState = new IdealState(REALTIME_TABLE_NAME);
-    List<StreamMetadata> streamMetadataList = Collections.singletonList(
+    List<StreamMetadata> streamMetadataList = List.of(
         new StreamMetadata(segmentManager._streamConfigs.get(0), 3,
             Arrays.asList(new PartitionGroupMetadata(0, PARTITION_OFFSET, 5),
                 new PartitionGroupMetadata(1, PARTITION_OFFSET, 10),
@@ -284,7 +283,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
     // Create StreamMetadata with default sequence numbers (-1, from 2-arg constructor)
     IdealState idealState = new IdealState(REALTIME_TABLE_NAME);
-    List<StreamMetadata> streamMetadataList = Collections.singletonList(
+    List<StreamMetadata> streamMetadataList = List.of(
         new StreamMetadata(segmentManager._streamConfigs.get(0), 2,
             Arrays.asList(new PartitionGroupMetadata(0, PARTITION_OFFSET),
                 new PartitionGroupMetadata(1, PARTITION_OFFSET))));
@@ -329,13 +328,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
     Map<String, String> committedSegmentInstanceStateMap = instanceStatesMap.get(committingSegment);
     assertNotNull(committedSegmentInstanceStateMap);
     assertEquals(new HashSet<>(committedSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.ONLINE));
+        Set.of(SegmentStateModel.ONLINE));
 
     String consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 1, CURRENT_TIME_MS).getSegmentName();
     Map<String, String> consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
     assertNotNull(consumingSegmentInstanceStateMap);
     assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.CONSUMING));
+        Set.of(SegmentStateModel.CONSUMING));
 
     // Verify segment ZK metadata for committed segment and new consuming segment
     SegmentZKMetadata committedSegmentZKMetadata = segmentManager._segmentZKMetadataMap.get(committingSegment);
@@ -365,13 +364,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
     committedSegmentInstanceStateMap = instanceStatesMap.get(committingSegment);
     assertNotNull(committedSegmentInstanceStateMap);
     assertEquals(new HashSet<>(committedSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.ONLINE));
+        Set.of(SegmentStateModel.ONLINE));
 
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 2, CURRENT_TIME_MS).getSegmentName();
     consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
     assertNotNull(consumingSegmentInstanceStateMap);
     assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.CONSUMING));
+        Set.of(SegmentStateModel.CONSUMING));
 
     // Illegal segment commit - commit the segment again
     try {
@@ -383,13 +382,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
     // committing segment's partitionGroupId no longer in the newStreamMetadataList
     List<StreamMetadata> streamMetadataListWithout0 =
-        segmentManager.getNewStreamMetadataList(segmentManager._streamConfigs, Collections.emptyList(),
+        segmentManager.getNewStreamMetadataList(segmentManager._streamConfigs, List.of(),
             mock(IdealState.class));
     // Remove partition 0 from the first stream's metadata
     StreamMetadata originalSm = streamMetadataListWithout0.get(0);
     List<PartitionGroupMetadata> filteredList = new ArrayList<>(originalSm.getPartitionGroupMetadataList());
     filteredList.remove(0);
-    segmentManager._streamMetadataList = Collections.singletonList(
+    segmentManager._streamMetadataList = List.of(
         new StreamMetadata(originalSm.getStreamConfig(), originalSm.getNumPartitions(), filteredList));
 
     // Commit a segment for partition 0 - No new entries created for partition which reached end of life
@@ -409,7 +408,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     committedSegmentInstanceStateMap = instanceStatesMap.get(committingSegment);
     assertNotNull(committedSegmentInstanceStateMap);
     assertEquals(new HashSet<>(committedSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.ONLINE));
+        Set.of(SegmentStateModel.ONLINE));
 
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 3, CURRENT_TIME_MS).getSegmentName();
     consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
@@ -516,7 +515,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     final BatchConfig[] capturedConfig = new BatchConfig[1];
     doAnswer(invocation -> {
       capturedConfig[0] = invocation.getArgument(3);
-      return Collections.singleton(consumingSegment);
+      return Set.of(consumingSegment);
     }).when(segmentManager).forceCommit(eq(tableNameWithType), isNull(), isNull(), any());
 
     PauseStatusDetails pauseStatusDetails =
@@ -524,7 +523,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
             batchConfig);
 
     assertEquals(capturedConfig[0], batchConfig, "pauseConsumption should forward the supplied batch config");
-    assertEquals(pauseStatusDetails.getConsumingSegments(), Collections.singleton(consumingSegment),
+    assertEquals(pauseStatusDetails.getConsumingSegments(), Set.of(consumingSegment),
         "pauseConsumption should include consuming segments from the updated ideal state");
   }
 
@@ -552,7 +551,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
   public void testPauseStatusDetailsJsonRoundTrip()
       throws Exception {
     List<Integer> inactiveTopics = List.of(0, 2);
-    PauseStatusDetails original = new PauseStatusDetails(false, Collections.emptySet(),
+    PauseStatusDetails original = new PauseStatusDetails(false, Set.of(),
         PauseState.ReasonCode.ADMINISTRATIVE, "comment", "12345", inactiveTopics);
 
     String json = org.apache.pinot.spi.utils.JsonUtils.objectToString(original);
@@ -602,13 +601,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
       Map<String, String> committedSegmentInstanceStateMap = instanceStatesMap.get(committingSegment);
       assertNotNull(committedSegmentInstanceStateMap);
       assertEquals(new HashSet<>(committedSegmentInstanceStateMap.values()),
-          Collections.singleton(SegmentStateModel.ONLINE));
+          Set.of(SegmentStateModel.ONLINE));
 
       String consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 1, CURRENT_TIME_MS).getSegmentName();
       Map<String, String> consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
       assertNotNull(consumingSegmentInstanceStateMap);
       assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-          Collections.singleton(SegmentStateModel.CONSUMING));
+          Set.of(SegmentStateModel.CONSUMING));
 
       // Verify segment ZK metadata for committed segment and new consuming segment
       SegmentZKMetadata committedSegmentZKMetadata = segmentManager._segmentZKMetadataMap.get(committingSegment);
@@ -666,13 +665,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
       Map<String, String> committedSegmentInstanceStateMap = instanceStatesMap.get(committingSegment);
       assertNotNull(committedSegmentInstanceStateMap);
       assertEquals(new HashSet<>(committedSegmentInstanceStateMap.values()),
-          Collections.singleton(SegmentStateModel.ONLINE));
+          Set.of(SegmentStateModel.ONLINE));
 
       String consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 1, CURRENT_TIME_MS).getSegmentName();
       Map<String, String> consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
       assertNotNull(consumingSegmentInstanceStateMap);
       assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-          Collections.singleton(SegmentStateModel.CONSUMING));
+          Set.of(SegmentStateModel.CONSUMING));
 
       // Verify segment ZK metadata for committed segment and new consuming segment
       SegmentZKMetadata committedSegmentZKMetadata = segmentManager._segmentZKMetadataMap.get(committingSegment);
@@ -880,13 +879,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
     // Remove the CONSUMING segment from the ideal state for partition group 0 (step 3 failed)
     String consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 0, CURRENT_TIME_MS).getSegmentName();
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, null);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Remove the CONSUMING segment from the ideal state and segment ZK metadata map for partition group 0 (step 2
     // failed)
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, null);
     assertNotNull(segmentManager._segmentZKMetadataMap.remove(consumingSegment));
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // 2 partitions commit segment
     for (int partitionGroupId = 0; partitionGroupId < 2; partitionGroupId++) {
@@ -899,13 +898,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 1, CURRENT_TIME_MS).getSegmentName();
     String latestCommittedSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 0, CURRENT_TIME_MS).getSegmentName();
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, latestCommittedSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Remove the CONSUMING segment from the ideal state and segment ZK metadata map for partition group 0 (step 2
     // failed)
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, latestCommittedSegment);
     assertNotNull(segmentManager._segmentZKMetadataMap.remove(consumingSegment));
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     /*
       Test all replicas of the new segment are OFFLINE
@@ -919,12 +918,12 @@ public class PinotLLCRealtimeSegmentManagerTest {
     // Turn all the replicas for the CONSUMING segment to OFFLINE for partition group 0
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 0, CURRENT_TIME_MS).getSegmentName();
     turnNewConsumingSegmentOffline(instanceStatesMap, consumingSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Turn all the replicas for the CONSUMING segment to OFFLINE for partition group 0 again
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 1, CURRENT_TIME_MS).getSegmentName();
     turnNewConsumingSegmentOffline(instanceStatesMap, consumingSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // 2 partitions commit segment
     for (int partitionGroupId = 0; partitionGroupId < 2; partitionGroupId++) {
@@ -940,39 +939,39 @@ public class PinotLLCRealtimeSegmentManagerTest {
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 3, CURRENT_TIME_MS).getSegmentName();
     latestCommittedSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 2, CURRENT_TIME_MS).getSegmentName();
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, latestCommittedSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Remove the CONSUMING segment from the ideal state and segment ZK metadata map for partition group 0 (step 2
     // failed)
     removeNewConsumingSegment(instanceStatesMap, consumingSegment, latestCommittedSegment);
     assertNotNull(segmentManager._segmentZKMetadataMap.remove(consumingSegment));
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Turn all the replicas for the CONSUMING segment to OFFLINE for partition group 0
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 3, CURRENT_TIME_MS).getSegmentName();
     turnNewConsumingSegmentOffline(instanceStatesMap, consumingSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // Turn all the replicas for the CONSUMING segment to OFFLINE for partition group 0 again
     consumingSegment = new LLCSegmentName(RAW_TABLE_NAME, 0, 4, CURRENT_TIME_MS).getSegmentName();
     turnNewConsumingSegmentOffline(instanceStatesMap, consumingSegment);
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     /*
      * End of shard cases
      */
     // 1 reached end of shard.
     List<StreamMetadata> streamMetadataListWithout1 =
-        segmentManager.getNewStreamMetadataList(segmentManager._streamConfigs, Collections.emptyList(),
+        segmentManager.getNewStreamMetadataList(segmentManager._streamConfigs, List.of(),
             mock(IdealState.class));
     // Remove partition 1 from the first stream's metadata
     StreamMetadata origSm = streamMetadataListWithout1.get(0);
     List<PartitionGroupMetadata> filteredPgList = new ArrayList<>(origSm.getPartitionGroupMetadataList());
     filteredPgList.remove(1);
-    segmentManager._streamMetadataList = Collections.singletonList(
+    segmentManager._streamMetadataList = List.of(
         new StreamMetadata(origSm.getStreamConfig(), origSm.getNumPartitions(), filteredPgList));
     // noop
-    testRepairs(segmentManager, Collections.emptyList());
+    testRepairs(segmentManager, List.of());
 
     // 1 commits segment - should not create new metadata or CONSUMING segment
     String segmentName = new LLCSegmentName(RAW_TABLE_NAME, 1, 1, CURRENT_TIME_MS).getSegmentName();
@@ -1026,7 +1025,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     // Verify all replicas are now CONSUMING
     consumingSegmentInstanceStateMap = instanceStatesMap.get(consumingSegment);
     assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.CONSUMING));
+        Set.of(SegmentStateModel.CONSUMING));
     assertEquals(consumingSegmentInstanceStateMap.size(), 3);
     assertEquals(consumingSegmentInstanceStateMap.get(offlineInstance), SegmentStateModel.CONSUMING);
   }
@@ -1072,7 +1071,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     Map<String, String> consumingSegmentInstanceStateMap = instanceStatesMap.remove(consumingSegment);
     assertNotNull(consumingSegmentInstanceStateMap);
     assertEquals(new HashSet<>(consumingSegmentInstanceStateMap.values()),
-        Collections.singleton(SegmentStateModel.CONSUMING));
+        Set.of(SegmentStateModel.CONSUMING));
 
     if (latestCommittedSegment != null) {
       Map<String, String> latestCommittedSegmentInstanceStateMap = instanceStatesMap.get(latestCommittedSegment);
@@ -1187,7 +1186,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
         // Committed segment should have all instances in ONLINE state
         instanceStateMap = instanceStatesMap.get(segmentName);
-        assertEquals(new HashSet<>(instanceStateMap.values()), Collections.singleton(SegmentStateModel.ONLINE));
+        assertEquals(new HashSet<>(instanceStateMap.values()), Set.of(SegmentStateModel.ONLINE));
 
         // Committed segment ZK metadata should be DONE
         SegmentZKMetadata segmentZKMetadata = segmentManager._segmentZKMetadataMap.get(segmentName);
@@ -1385,7 +1384,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     FakePinotLLCRealtimeSegmentManager segmentManager =
         spy(new FakePinotLLCRealtimeSegmentManager(mockHelixResourceManager));
     setUpNewTable(segmentManager, 2, 5, 4);
-    segmentManager._streamMetadataList = Collections.singletonList(
+    segmentManager._streamMetadataList = List.of(
         new StreamMetadata(segmentManager._streamConfigs.get(0), 4, IntStream.range(0, 4)
             .mapToObj(partition -> new PartitionGroupMetadata(partition, PARTITION_OFFSET))
             .collect(Collectors.toList())));
@@ -1402,13 +1401,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
   public void testCommitSegmentMetadataSkipsCreatingNewMetadataWhenTopicPausedIfPartitionIdsFallbackNeeded() {
     FakePinotLLCRealtimeSegmentManager segmentManager = spy(new FakePinotLLCRealtimeSegmentManager());
     setUpNewTable(segmentManager, 2, 5, 4);
-    segmentManager._streamMetadataList = Collections.singletonList(
+    segmentManager._streamMetadataList = List.of(
         new StreamMetadata(segmentManager._streamConfigs.get(0), 4, IntStream.range(0, 4)
             .mapToObj(partition -> new PartitionGroupMetadata(partition, PARTITION_OFFSET))
             .collect(Collectors.toList())));
 
     PauseState pauseState = new PauseState(false, PauseState.ReasonCode.ADMINISTRATIVE, "pause-topic-for-test",
-        Long.toString(CURRENT_TIME_MS), Collections.singletonList(0));
+        Long.toString(CURRENT_TIME_MS), List.of(0));
     segmentManager._idealState.getRecord()
         .setSimpleField(PinotLLCRealtimeSegmentManager.PAUSE_STATE, pauseState.toJsonString());
 
@@ -1433,7 +1432,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
     PauseState pauseState =
         new PauseState(true, PauseState.ReasonCode.ADMINISTRATIVE, "pause-for-test", Long.toString(CURRENT_TIME_MS),
-            Collections.emptyList());
+            List.of());
     segmentManager._idealState.getRecord()
         .setSimpleField(PinotLLCRealtimeSegmentManager.PAUSE_STATE, pauseState.toJsonString());
     segmentManager._idealState.getRecord()
@@ -1458,7 +1457,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     when(propertyStore.remove(anyString(), eq(AccessOption.PERSISTENT))).thenReturn(true);
 
     PauseState pauseState = new PauseState(false, PauseState.ReasonCode.ADMINISTRATIVE, "pause-topic-for-test",
-        Long.toString(CURRENT_TIME_MS), Collections.singletonList(0));
+        Long.toString(CURRENT_TIME_MS), List.of(0));
     segmentManager._idealState.getRecord()
         .setSimpleField(PinotLLCRealtimeSegmentManager.PAUSE_STATE, pauseState.toJsonString());
 
@@ -1933,13 +1932,13 @@ public class PinotLLCRealtimeSegmentManagerTest {
     // case 1: the segmentMetadata download uri is identical to the uri of the tmp segment. Should not delete
     when(segZKMeta.getStatus()).thenReturn(Status.DONE);
     when(segZKMeta.getDownloadUrl()).thenReturn(SCHEME + tableDir + "/" + segmentFileName);
-    numDeletedTmpSegments = segmentManager.deleteTmpSegments(REALTIME_TABLE_NAME, Collections.singletonList(segZKMeta));
+    numDeletedTmpSegments = segmentManager.deleteTmpSegments(REALTIME_TABLE_NAME, List.of(segZKMeta));
     assertTrue(segmentFile.exists());
     assertEquals(numDeletedTmpSegments, 0);
 
     // case 2: download url is empty, indicating the tmp segment is absolutely orphan. Delete the file
     when(segZKMeta.getDownloadUrl()).thenReturn(METADATA_URI_FOR_PEER_DOWNLOAD);
-    numDeletedTmpSegments = segmentManager.deleteTmpSegments(REALTIME_TABLE_NAME, Collections.singletonList(segZKMeta));
+    numDeletedTmpSegments = segmentManager.deleteTmpSegments(REALTIME_TABLE_NAME, List.of(segZKMeta));
     assertFalse(segmentFile.exists());
     assertEquals(numDeletedTmpSegments, 1);
   }
@@ -2368,7 +2367,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     Map<String, String> singleStreamConfigMap =
         FakeStreamConfigUtils.getDefaultLowLevelStreamConfigs().getStreamConfigsMap();
     SegmentPartitionConfig partitionConfig = new SegmentPartitionConfig(
-        Collections.singletonMap("col", new ColumnPartitionConfig("Modulo", 4, null)));
+        Map.of("col", new ColumnPartitionConfig("Modulo", 4, null)));
 
     // No SegmentPartitionConfig → null
     TableConfig tableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
@@ -2381,7 +2380,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     assertNotNull(metadata);
     ColumnPartitionMetadata colMetadata = metadata.getColumnPartitionMap().get("col");
     assertEquals(colMetadata.getNumPartitions(), 4);
-    assertEquals(colMetadata.getPartitions(), Collections.singleton(2));
+    assertEquals(colMetadata.getPartitions(), Set.of(2));
 
     // Multi-stream, even distribution: perStreamNumPartitions = numPartitionGroups / numStreams
     // 2 streams × 4 partitions each = 8 total partition groups
@@ -2399,7 +2398,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     colMetadata = metadata.getColumnPartitionMap().get("col");
     assertEquals(colMetadata.getNumPartitions(), 4,
         "Multi-stream partition count must be per-stream (numPartitionGroups / numStreams), not total");
-    assertEquals(colMetadata.getPartitions(), Collections.singleton(2));
+    assertEquals(colMetadata.getPartitions(), Set.of(2));
 
     // Stream 1, partition 3: Pinot partition ID = 1 * 10000 + 3 = 10003
     int stream1Partition3 = IngestionConfigUtils.PARTITION_PADDING_OFFSET + 3;
@@ -2407,7 +2406,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
     assertNotNull(metadata);
     colMetadata = metadata.getColumnPartitionMap().get("col");
     assertEquals(colMetadata.getNumPartitions(), 4);
-    assertEquals(colMetadata.getPartitions(), Collections.singleton(3));
+    assertEquals(colMetadata.getPartitions(), Set.of(3));
 
     // Multi-stream, uneven distribution: numPartitionGroups not divisible by numStreams → null
     assertNull(segmentManager.getPartitionMetadataFromTableConfig(multiStreamTableConfig, 0, 7),
@@ -2517,7 +2516,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
 
     public void ensureAllPartitionsConsuming() {
       ensureAllPartitionsConsuming(_tableConfig, _streamConfigs, _idealState,
-          getNewStreamMetadataList(_streamConfigs, Collections.emptyList(), mock(IdealState.class)), null);
+          getNewStreamMetadataList(_streamConfigs, List.of(), mock(IdealState.class)), null);
     }
 
     @Override
@@ -2610,7 +2609,7 @@ public class PinotLLCRealtimeSegmentManagerTest {
         List<PartitionGroupMetadata> partitionGroupMetadataList = IntStream.range(0, _numPartitions)
             .mapToObj(i -> new PartitionGroupMetadata(i, PARTITION_OFFSET))
             .collect(Collectors.toList());
-        return Collections.singletonList(
+        return List.of(
             new StreamMetadata(streamConfigs.get(0), _numPartitions, partitionGroupMetadataList));
       }
     }
