@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.query.aggregation.function;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.pinot.common.request.context.ExpressionContext;
@@ -73,7 +72,7 @@ public class StUnionAggregationFunctionTest {
 
     AggregationResultHolder aggregationResultHolder = aggregationFunction.createAggregationResultHolder();
     Map<ExpressionContext, BlockValSet> blockValSetMap =
-        Collections.singletonMap(expression, new BytesBlockValSet(values));
+        Map.of(expression, new BytesBlockValSet(values));
 
     aggregationFunction.aggregate(values.length, aggregationResultHolder, blockValSetMap);
 
