@@ -18,7 +18,7 @@
  */
 package org.apache.pinot.query.planner.explain;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import org.apache.calcite.rel.RelDistribution;
@@ -45,11 +45,11 @@ public class PlanNodeMergerTest {
       new DataSchema.ColumnDataType[]{DataSchema.ColumnDataType.INT});
 
   private static ExplainedNode leaf(String title) {
-    return new ExplainedNode(0, SCHEMA, null, Collections.emptyList(), title, Map.of());
+    return new ExplainedNode(0, SCHEMA, null, List.of(), title, Map.of());
   }
 
   private static ExchangeNode exchange(Set<String> tableNames) {
-    return new ExchangeNode(0, SCHEMA, Collections.singletonList(leaf("Scan")),
+    return new ExchangeNode(0, SCHEMA, List.of(leaf("Scan")),
         PinotRelExchangeType.getDefaultExchangeType(), RelDistribution.Type.BROADCAST_DISTRIBUTED, null, false, null,
         false, false, tableNames, ExchangeStrategy.BROADCAST_EXCHANGE, "absHashCodeMurmur3");
   }
@@ -68,8 +68,8 @@ public class PlanNodeMergerTest {
 
   @Test
   public void differentNodeTypesDoNotMerge() {
-    ProjectNode project = new ProjectNode(0, SCHEMA, NodeHint.EMPTY, Collections.singletonList(leaf("Scan")),
-        Collections.emptyList());
+    ProjectNode project = new ProjectNode(0, SCHEMA, NodeHint.EMPTY, List.of(leaf("Scan")),
+        List.of());
     assertNull(PlanNodeMerger.mergePlans(project, leaf("Scan"), false));
   }
 }
