@@ -20,7 +20,7 @@ package org.apache.pinot.segment.local.segment.index.creator;
 
 import com.google.common.collect.Lists;
 import java.io.File;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.segment.local.PinotBuffersAfterMethodCheckRule;
@@ -109,7 +109,7 @@ public class SegmentGenerationWithNoRecordsTest implements PinotBuffersAfterMeth
     config.setSegmentName(SEGMENT_NAME);
 
     SegmentIndexCreationDriverImpl driver = new SegmentIndexCreationDriverImpl();
-    driver.init(config, new GenericRowRecordReader(Collections.emptyList()));
+    driver.init(config, new GenericRowRecordReader(List.of()));
     driver.build();
     driver.getOutputDirectory().deleteOnExit();
     return driver.getOutputDirectory();
